...
  );
}

export default function App() {
  return (
    <TabBar bottomTabs primary>
      <TabBarItem title="Browse" testID="tab-home">
        <HomeTab />
      </TabBarItem>
      <TabBarItem title="Profile" testID="tab-profile">
        <ProfileTab />
      </TabBarItem>
    </TabBar>
...
